version-2/osiris_stylesheet.css
html, .big-wrap {
    width:100%;
    height: 100vh;
    margin: 0;
    /*background: white;*/
    /*background-size: contain;*/
    font-family: 'Arial', sans-serif;
}

body {
  margin: 0;
}

.big-wrap {
  margin: 0;
  background: black;
  color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  padding-top: 3%;
}


.container-box {
  width: 80%;
  margin: 0 auto;
}

/*nav bar*/

.nav-bar-links {
  margin-top: 0;
}

.header ul{
  padding: 0;
  list-style: none;
}
.header ul li{
    display: inline-block;
    position: relative;
    line-height: 21px;
    /*text-align: left;*/
    text-align: center;
    width: 200px;
   /* padding-left: 3%;
    padding-right: 3%;*/
}

.header ul li a {
    display: block;
    /*padding: 8px 25px; */ /*commented out to vertical align the links*/
    text-decoration: none;
}

/*.header ul li a:hover{
    color: #fff;
    background: #939393;
    width: 100%;
}*/

.header ul li ul.dropdown{
    min-width: 125px; /* Set width of the dropdown */
    display: none;
    position: absolute;
    z-index: 999;
    background: white;
}

.header ul li ul.dropdown-black {
  background: black;
}

.header ul li:hover ul.dropdown{
    display: block; /* Display the dropdown */
}
.header ul li ul.dropdown li{
    display: block;
}

.header {
  height: 30px;
  /*background: black;*/
  top: 0;
  /*position: absolute;*/
  position: fixed;
  width: 100%;
  font-family: 'Arial', sans-serif;
  text-align: center;
  line-height: 30px;
  z-index: 1000;
  margin-bottom: 2%;
}

.header a {
  /*color: white;*/
  text-decoration: none;
  padding-left: 5%;
  padding-right: 5%;
  text-transform: lowercase;
  letter-spacing: 3px;
  font-size: .8em;
}

#home-header,
#about-header,
#artworks-header {
  background: #000000;
}

#home-header .active,
#about-header .active,
#artworks-header .active {
  color: #FFFFFF;
}

#home-header a,
#about-header a,
#artworks-header a {
  color: #727272;
}

#gallery-header {
  background: #FFFFFF;
}

#gallery-header .active {
  color: #000000;
}

#gallery-header a {
  color: #727272;
}

#artworks-header a {
  font-size: .9em;
}


.wrapper {
  background-size: cover;
  position: relative;
}

.wrapper div{
  /*width:calc(100% / 56);*/
  width: calc(100% / 28);
  display:inline-block;
}

#bottom-level {
  height: 50vh;
}

#top-level {
  height: 50vh;
}

.panel {
  float: left;
  /*border: 1px solid pink;*/
  margin: 0 auto;
  height: 50vh;
}


#IMG_01 {
  background-image: url("./images/01.jpg");
}

#IMG_02 {
  background-image: url("./images/02.jpg");
}
#IMG_03 {
  background-image: url("./images/03.jpg");
}
#IMG_04 {
  background-image: url("./images/04.jpg");
}
#IMG_05 {
  background-image: url("./images/05.jpg");
}
#IMG_06 {
  background-image: url("./images/06.jpg");
}
#IMG_07 {
  background-image: url("./images/07.jpg");
}
#IMG_08 {
  background-image: url("./images/08.jpg");
}
#IMG_09 {
  background-image: url("./images/09.jpg");
}
#IMG_10 {
  background-image: url("./images/10.jpg");
}
#IMG_11 {
  background-image: url("./images/11.jpg");
}
#IMG_12 {
  background-image: url("./images/12.jpg");
}
#IMG_13 {
  background-image: url("./images/13.jpg");
}
#IMG_14 {
  background-image: url("./images/14.jpg");
}
#IMG_15 {
  background-image: url("./images/15.jpg");
}
#IMG_16 {
  background-image: url("./images/16.jpg");
}
#IMG_17 {
  background-image: url("./images/17.jpg");
}
#IMG_18 {
  background-image: url("./images/18.jpg");
}
#IMG_19 {
  background-image: url("./images/19.jpg");
}
#IMG_20 {
  background-image: url("./images/20.jpg");
}
#IMG_2 {
  background-image: url("./images/2.jpg");
}
#IMG_21 {
  background-image: url("./images/21.jpg");
}
#IMG_22 {
  background-image: url("./images/22.jpg");
}
#IMG_23 {
  background-image: url("./images/23.jpg");
}
#IMG_24 {
  background-image: url("./images/24.jpg");
}
#IMG_25 {
  background-image: url("./images/25.jpg");
}
#IMG_26 {
  background-image: url("./images/26.jpg");
}
#IMG_27 {
  background-image: url("./images/27.jpg");
}
#IMG_28 {
  background-image: url("./images/28.jpg");
}
#IMG_29 {
  background-image: url("./images/29.jpg");
}
#IMG_30 {
  background-image: url("./images/30.jpg");
}
#IMG_31 {
  background-image: url("./images/31.jpg");
}
#IMG_32 {
  background-image: url("./images/32.jpg");
}
#IMG_33 {
  background-image: url("./images/33.jpg");
}
#IMG_34 {
  background-image: url("./images/34.jpg");
}
#IMG_35 {
  background-image: url("./images/35.jpg");
}
#IMG_36 {
  background-image: url("./images/36.jpg");
}
#IMG_37 {
  background-image: url("./images/37.jpg");
}
#IMG_38 {
  background-image: url("./images/38.jpg");
}
#IMG_39 {
  background-image: url("./images/39.jpg");
}
#IMG_40 {
  background-image: url("./images/40.jpg");
}
#IMG_41 {
  background-image: url("./images/41.jpg");
}
#IMG_42 {
  background-image: url("./images/42.jpg");
}
#IMG_43 {
  background-image: url("./images/43.jpg");
}
#IMG_44 {
  background-image: url("./images/44.jpg");
}
#IMG_45 {
  background-image: url("./images/45.jpg");
}
#IMG_46 {
  background-image: url("./images/46.jpg");
}
#IMG_47 {
  background-image: url("./images/47.jpg");
}
#IMG_48 {
  background-image: url("./images/48.jpg");
}
#IMG_49 {
  background-image: url("./images/49.jpg");
}
#IMG_50 {
  background-image: url("./images/50.jpg");
}
#IMG_51 {
  background-image: url("./images/51.jpg");
}
#IMG_52 {
  background-image: url("./images/52.jpg");
}
#IMG_53 {
  background-image: url("./images/53.jpg");
}
#IMG_54 {
  background-image: url("./images/54.jpg");
}
#IMG_55 {
  background-image: url("./images/55.jpg");
}
#IMG_56 {
  background-image: url("./images/56.jpg");
}


/*g a l l e r y*/

.gallery-wrap {
  margin-left: 100px;
  margin-right: 100px;
  margin-top: 120px;
  /*margin-top: 5%;*/
}

.gallery-wrap h1 {
  text-align: center;
  font-weight: bold;
  letter-spacing: 3px;
  padding: 2%;
  background: white;
}

.card {
  margin-bottom: 40px;
}

.card img {
  height: auto;
  max-width: 100%;
}

.details {
  font-size: .9em;
  margin-left: 10px;
}

.title {
  letter-spacing: 2px;
  font-weight: lighter;
}

.gallery-wrap h5 {
  margin: 3%;
}

.exhibit {
  position: fixed;
  background: white;
  bottom: 0;
  width: 100%;
  font-size: .7em;
  /*padding-top: .75%;*/
  /*margin: 10px 100px 0px 100px;*/
  height: 30px;
  line-height: 30px;
  text-align: right;
}

.exhibit span {
  margin-right: 101px;
}

/*m a s k s*/

.mask-gallery {
  /*margin-top: 5%;*/
  padding-top: 120px;
  background: black;
}

.thumbnail.thumbnail.thumbnail {
  border: none;
  padding: 0;
  border-radius: 0;
  margin-bottom:6px;
  /*padding-bottom: 20px;*/
  background: black;
}

.modal-dialog.modal-dialog.modal-dialog {
  height: 90vh;
}

.modal-backdrop.modal-backdrop.modal-backdrop {
   opacity: 0.8;
}

.modal-content.modal-content.modal-content {
  background: none;
}

.modal-body.modal-body.modal-body {
  padding: 0;
}

/*a b o u t */

.contact-container {
  height: 100%;
}

.contact-details {
  width: 52%;
  margin-left: auto;
  margin-right: auto;
  padding-top: 10%;
  padding-bottom: 10%;
  color: black;
}

.contact-details {
  font-weight: 100;
  letter-spacing: 0.5px;
  line-height: 130%;
}

.contact-details h1 {
  letter-spacing: 2px;
  font-size: 2.5em;
}

.contact-details a {
  text-decoration: none;
  color: white;
}

.contact-details a:hover {
  border-bottom: 2px solid #FF00C3;
}

.contact-details .fa {
  color: #727272;
}

.contact-details .fa-inverse.fa-inverse {
  color: white;
}

.contact-details h1 {
  text-align: center;
}

.image {
  display:flex;
  justify-content:center;
  align-items:center;
}
.osiris-pic {
  margin: 20px auto;
  width: 500px;
}

.first-p {
  padding-top: 10%;
}

/* a b o u t     f o o t e r */
.footer {
  /*height: 30px;*/
  /*position: absolute;*/
  bottom: 0;
  position: fixed;
  width: 100%;
  font-family: 'Arial', sans-serif;
  line-height: 30px;
  z-index: 1000;
  margin-top: 2%;
  width: 100%;
  background: black;
}

.footer span.footer-deets{
  color: white;
  margin-left: 80px;
  font-size: .8em;
}

.footer ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  float: right;
  margin-right: 80px;
}

.footer ul li {
  display: inline;
  padding-left: 15px;
}

.tooltip {
  position:relative;
  display:inline-block;
}

.tooltip > span {
  background: black;
  font-size: .7em;
  color: white;
  white-space: nowrap;
  display:none;
}

.tooltip:hover > span {
  display: inline-block;
  position:absolute;
  top:-30px;
  left:50%;
  transform:translateX(-50%);
  text-align: center;
}


@media only screen
  and (min-device-width: 320px)
  and (max-device-width: 480px)
  and (-webkit-min-device-pixel-ratio: 2) {
  .nav-bar-links {
    font-size: 3.5em;
    margin-top: 2%;
    padding: 10%;
  }

  #home-header, #about-header, #artworks-header {
    height: 78px;
  }

  .contact-details {
    width: 85%;
  }

  .contact-details h1:first-child {
    padding-top: 10%;
  }

  .contact-details p {
    font-size: 25px;
    line-height: 150%;
  }

  .dropdown {
    margin-top: 30px;
  }

  .dropdown li {
    padding-top: 10%;
    padding-bottom: 10%;
    /*height: 70px;*/
    /*line-height: 170px;*/
  }

  .dropdown li a {
    line-height: 70px;
  }

  .footer {
    padding-top: 5%;
    padding-bottom: 5%;
  }

  .footer .fa.fa.fa {
    font-size: 2em;
  }

  .exhibit span {
    font-size: 25px;
  }

}

